[package]
name = "nash"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
arrayvec = "0.7"
bincode = "1.3"
bitvec = "1.0"
crossbeam = "0.8"
dashmap = "5.5"
fxhash = "0.2"
itertools = "0.12"
memmap2 = "0.9"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.9"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
