[package]
name = "nash"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
dashmap = "5.5"
rand = "0.8"
rayon = "1.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.clippy]
all = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
