[package]
name = "nash"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.1", features = ["alloc", "use-std"] }
dashmap = "5.5"
rand = "0.8"
rayon = "1.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
similar_names = "allow"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
